<resources>
    <string name="app_name">Voluntariado</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_inicial_fragment_label">Voluntariado</string>
    <string name="lista_instituicoes_fragment_label">Lista Instituições</string>
    <string name="novo_instituicao_fragment_label">Nova Instituição</string>
    <string name="edita_instituicao_fragment_label">Editar Instituição</string>
    <string name="elimina_instituicao_fragment_label">Eliminar Instituição?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="novo_instituicao">Nova instituição</string>
    <string name="alterar_instituicao">Alterar instituição</string>
    <string name="eliminar_instituicao">Eliminar instituição</string>
    <string name="nome_instituicao">Nome Instituição:</string>
    <string name="morada">Morada:</string>
    <string name="telefone">Telefone</string>
    <string name="tarefas">Tarefas</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="versao">Instituicoes v. 1.0</string>
    <string name="preencha_nome">Preencha o nome </string>
    <string name="preencha_telefone">Preencha o telefone</string>
    <string name="preencha_morada">Preencha a morada</string>
    <string name="erro_inserir_instituicao">Erro ao inserir instituicao</string>
    <string name="erro_alterar_instituicao">Erro ao alterar instituição</string>
    <string name="instituicao_guardada_sucesso">Instituição guardada com sucesso</string>
    <string name="erro_eliminar_instituicao">Erro ao eliminar instituição</string>
    <string name="instituicao_eliminado_sucesso">Instituição eliminada com sucesso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BotaoInstituicoes">Button</string>
    <string name="instituicoes">Instituições</string>
    <string name="voluntarios">Voluntarios</string>
    <string name="sair">Sair</string>
    <string name="nome_voluntario">Nome Voluntario</string>
    <string name="data_nascimento">Data nascimento</string>
    <string name="genero">Genero</string>
    <string name="alterar_voluntario">Alterar voluntario</string>
    <string name="eliminar_voluntario">Eliminar voluntario</string>
    <string name="preencha_nome_voluntario">Preencha o nome do voluntario</string>
    <string name="preencha_data_nascimento">Preencha a data de nascimento</string>
    <string name="preencha_genero">Preencha o genero</string>
    <string name="erro_inserir_voluntario">Erro ao inserir voluntario</string>
    <string name="voluntario_guardado_sucesso">Voluntario guardado com sucesso</string>
    <string name="erro_alterar_registo">Erro ao alterar registo</string>
    <string name="erro_eliminar">Erro ao eliminar registo</string>
    <string name="eliminado_sucesso">Registo eliminado com sucesso</string>
    <string name="estado">Estado da tarefa</string>
    <string name="nome_tarefa">Nome tarefa</string>
    <string name="preencha_estado">Preencha o estado</string>
    <string name="erro_inserir_tarefa">Erro a inserir tarefa</string>
    <string name="tarefa_guardada_sucesso">Tarefa guardada com sucesso</string>
    <string name="versao_final">Versão Final</string>
</resources>